--- a/style.css
+++ b/style.css
@@ -1,18 +1,1 @@
-.color {
-  border: 1px solid black;
-  display: inline-block;
-  width: 50px;
-  height: 50px;
-  background-color: black;
-}
-
-main div {
-  display: inline-block;
-}
-
-.pixel {
-  border: 1px solid black;
-  height: 40px;
-  width: 40px;
-  list-style-type: none;
-}
+z
