--- a/style.css
+++ b/style.css
@@ -1,1 +1,20 @@
-z
+#blue {
+    background-color: blue;
+    border: solid 1px black;
+    display: inline-block;
+}
+#pink {
+    background-color: pink;
+    border: solid  1px black;
+    display: inline-block
+}
+#red {
+    background-color: red;
+    border: solid  1px black;
+    display: inline-block
+}
+#yellow {
+    background-color: yellow;
+    border: solid  1px black;
+    display: inline-block
+}
