--- a/style.css
+++ b/style.css
@@ -26,3 +26,10 @@
     width: 30px;
     height: 30px;
 }
+.pixel {
+    border: solid 1px black;
+    display: inline-block;
+    background-color:white;
+    width: 40px;
+    height: 40px;
+}
