--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 #black {
-  background-color: black;
   border: solid  1px black;
   display: inline-block;
   width: 30px;
@@ -7,7 +6,6 @@
 }
 
 #blue {
-  background-color: blue;
   border: solid 1px black;
   display: inline-block;
   width: 30px;
@@ -15,7 +13,6 @@
 }
 
 #pink {
-  background-color: pink;
   border: solid  1px black;
   display: inline-block;
   width: 30px;
@@ -23,7 +20,6 @@
 }
 
 #yellow {
-  background-color: yellow;
   border: solid  1px black;
   display: inline-block;
   width: 30px;
@@ -36,4 +32,7 @@
   background-color: white;
   width: 40px;
   height: 40px;
+}
+#pixel-board {
+  font-size: 0;
 }
