--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 #black {
   border: solid  1px black;
   display: inline-block;
@@ -34,5 +38,21 @@
   height: 40px;
 }
 #pixel-board {
-  font-size: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#color-palette{
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+
+}
+#title{
+  margin:0;
+  padding: 0%;
+  background-color: rgb(122, 100, 2323);
+}
+#clear-board{
+
 }
